--- a/views/admin/adminCustomers.ejs
+++ b/views/admin/adminCustomers.ejs
@@ -1,7 +1,7 @@
 
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/admin/head.ejs")%>
 <body class="bg-[#F2F2F2]">
-    <%-include("../partials/header.ejs")%>
+    <%-include("../partials/admin/header.ejs")%>
     <main class="px-10 flex">
         <div class="left mt-28 space-y-4 border-r-[.1px] border-gray-400  w-fit pt-1 pb-1 pr-2">
             <a href="dashboard" class="flex items-center space-x-2 cursor-pointer hover:bg-gray-200 rounded-sm px-3 py-3">
@@ -113,7 +113,7 @@
            
 
         </div>
-        <%-include("../partials/customersEditPopup.ejs")%>
+        <%-include("../partials/admin/customersEditPopup.ejs")%>
     </main>
     
 </body>
