--- a/views/user/aboutUs.ejs
+++ b/views/user/aboutUs.ejs
@@ -1,9 +1,9 @@
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
 <body class="bg-[#F2F2F2] flex flex-col h-screen">
-    <%-include('../partials/headerPhone.ejs')%>
-    <%-include('../partials/HeaderDesktopUser.ejs')%>
+    <%-include('../partials/user/headerPhone.ejs')%>
+    <%-include('../partials/user/HeaderDesktopUser.ejs')%>
     <main class="px-2 lg:px-96 lg:mt-10">
         <div class="bg-white  pl-4 rounded-md py-2 mt-3  text-base text-[#452F24] font-semibold ">
             <p>About us</p>
@@ -106,7 +106,7 @@
     </main>
     <div class=" flex-grow">
     </div>
-    <%-include("../partials/userFooter.ejs")%>
+    <%-include("../partials/user/userFooter.ejs")%>
 </body>
 <script src="/javascripts/user/aboutUs.js"></script>
 </html>
