--- a/views/user/orderSuccessful.ejs
+++ b/views/user/orderSuccessful.ejs
@@ -1,10 +1,10 @@
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
 <link rel="stylesheet" href="">
 <body class="bg-[#F2F2F2] flex flex-col h-screen pb-2">
-    <%-include('../partials/headerPhone.ejs')%>
-    <%-include('../partials/HeaderDesktopUser.ejs')%>
+    <%-include('../partials/user/headerPhone.ejs')%>
+    <%-include('../partials/user/HeaderDesktopUser.ejs')%>
     <main>
        
         <div class="px-4 mt-5 lg:px-96">
