--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -1,11 +1,11 @@
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
 <link rel="stylesheet" href="/css/user/product.css">
 
 <body class="bg-[#F2F2F2] flex flex-col h-screen  ">
-    <%-include('../partials/headerPhone.ejs')%>
-    <%-include('../partials/HeaderDesktopUser.ejs')%>
+    <%-include('../partials/user/headerPhone.ejs')%>
+    <%-include('../partials/user/HeaderDesktopUser.ejs')%>
     <div class=""><!--container-->
         <div class="px-3 bg-white m-2  rounded-md pb-6 lg:flex   ">
             <div class="lg:w-1/2 w-full px-6"><!--Desktop flex firs part-->
@@ -177,7 +177,7 @@
     
     </div>
     <div class="hidden lg:block">  
-        <%-include("../partials/userFooter.ejs")%>
+        <%-include("../partials/user/userFooter.ejs")%>
     </div>
     <div class="flex-grow">
     </div> 
