--- a/views/admin/adminBannermanage.ejs
+++ b/views/admin/adminBannermanage.ejs
@@ -1,7 +1,7 @@
 
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/admin/head.ejs")%>
  <body class="bg-[#F2F2F2]">
-    <%-include("../partials/header.ejs")%>
+    <%-include("../partials/admin/header.ejs")%>
     <main class="px-10 flex">
         <div class="left mt-28 space-y-4 border-r-[.1px] border-gray-400  w-fit  pr-2 pb-1 pt-1">
             <a href="dashboard" class="flex items-center space-x-2 cursor-pointer hover:bg-gray-200 rounded-sm px-3 py-3">
@@ -109,7 +109,7 @@
 
         </div>
     </main>
-    <%-include("../partials/bannerEditPopup.ejs")%>
+    <%-include("../partials/admin/bannerEditPopup.ejs")%>
 </body>
 <script src="/javascripts/admin/adminBannermanage.js"></script>
 </html>
