--- a/views/partials/admin/categoryEditPopup.ejs
+++ b/views/partials/admin/categoryEditPopup.ejs
@@ -1,5 +1,5 @@
 
-<%-include("head.ejs")%>
+<!-- <%-include("head.ejs")%> -->
 <link rel="stylesheet" href="/css/admin/categories.css">
 <body class="bg-slate-200 ">
     <div class="fixed inset-0 flex justify-center items-center bg-[rgba(0,0,0,0.3)] hidden" id="categoryEditPopup">
