--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,4 +1,4 @@
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="/css/user/home.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <body class="bg-[#F2F2F2]">
@@ -416,7 +416,7 @@
         </a>
        
     </main>
-    <%-include("../partials/userFooter.ejs")%>
+    <%-include("../partials/user/userFooter.ejs")%>
         <div  id="SidebarContainerr" class="h-full w-full absolute inset-0 bg-[rgba(0,0,0,0.6)] invisible   transition-all duration-75">
             <div id="Sidebar" class="-translate-x-[250px] w-[250px] h-full  overflow-hidden fixed top-0 left-0 transition-all duration-300 ease-in "><!--Side bar Mobile-->
                 <div class="bg-[#5E8E99] min-h-[100px] max-h-[100px] py-5 flex justify-between items-center ">
