--- a/views/user/myCart.ejs
+++ b/views/user/myCart.ejs
@@ -1,10 +1,10 @@
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
 <link rel="stylesheet" href="">
 <body class="bg-[#F2F2F2] flex flex-col h-screen pb-2">
-    <%-include('../partials/headerPhone.ejs')%>
-    <%-include('../partials/HeaderDesktopUser.ejs')%>
+    <%-include('../partials/user/headerPhone.ejs')%>
+    <%-include('../partials/user/HeaderDesktopUser.ejs')%>
     <main class="pb-16">
         <div class="px-4 mt-7 lg:px-52">
             <div class="text-xl font-bold bg-white py-3 rounded-t-md flex px-3 hidden lg:flex">
