--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -1,11 +1,11 @@
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
 <body class="bg-[#F2F2F2]  flex flex-col h-screen">
     <header class="bg-[#5E8E99]  flex items-center justify-center px-3 py-2 lg:hidden">
         <img class="h-8" src="/images/Logo.png" alt="">
     </header>
-    <%-include('../partials/HeaderDesktopUser.ejs')%>
+    <%-include('../partials/user/HeaderDesktopUser.ejs')%>
     <main class="px-5 lg:px-0 lg:mx-60 lg:my-10 lg:flex lg:justify-between   lg:items-center  lg:flex-grow ">
 
             <div class="hidden lg:block  lg:h-full  lg:w-9/12 bg-[url('/images/logintest.jpeg')] bg-cover bg-no-repeat bg bg-center">
@@ -45,7 +45,7 @@
     </div>
     
     <div class="hidden lg:block">
-        <%-include("../partials/userFooter.ejs")%>
+        <%-include("../partials/user/userFooter.ejs")%>
     </div>
    
 </body>
