--- a/views/user/products.ejs
+++ b/views/user/products.ejs
@@ -1,8 +1,8 @@
-<%-include("../partials/head.ejs")%>
+<%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
-<%-include('../partials/headerPhone.ejs')%>
-<%-include('../partials/HeaderDesktopUser.ejs')%>
+<%-include('../partials//user/headerPhone.ejs')%>
+<%-include('../partials/user/HeaderDesktopUser.ejs')%>
 <body class="bg-[#F2F2F2] flex flex-col h-screen">
 
 
@@ -202,5 +202,5 @@
     </div>
 
     <div class="flex-grow"></div>
-    <%-include("../partials/userFooter.ejs")%>
+    <%-include("../partials/user/userFooter.ejs")%>
 </body>
