product in adminal done without sort,filter,and search

--- a/views/admin/adminCategory.ejs
+++ b/views/admin/adminCategory.ejs
@@ -61,7 +61,7 @@
                    
                     <form action="/admin/category/search" method="post" > <!--search-->
                         <div class="flex items-center rounded-md bg-white    text-[#666666] outline outline-[.1px] outline-gray-400">
-                            <input value="<%=locals.searchvalue%>" type="text" class="outline-none rounded-md pl-3 text-xs w-80 placeholder:text-xs" name="categorySearch" id="" placeholder="Search by Category name.. ">
+                            <input value="<%=locals.searchvalue%>" type="text" class="outline-none h-full rounded-md pl-3 text-xs w-80 placeholder:text-xs" name="categorySearch" id="" placeholder="Search by Category name.. ">
                             <button type="submit" class="bg-[#DAA520] px-1 py-1 rounded-md h-full cursor-pointer" >
                                 <img src="/images/search white.png" class="h-4" alt="">
                             </button>
