--- a/views/admin/adminProducts.ejs
+++ b/views/admin/adminProducts.ejs
@@ -98,71 +98,26 @@
                     <th class="font-medium text-center">Status</th>
                     <th class="rounded-tr-md font-medium">Action</th>
                 </tr>
+                <% products.forEach(function(data){%>
+                    <tr class="bg-white  text-sm  ">
+                        <td class="ps-3 py-2"><%=data._id%></td>
+                        <td class="max-w-[14rem] truncate pr-6 font-medium capitalize"><%=data.bookName%></td>
+                        <td class="capitalize"><%=data.category%></td>
+                        <td class="capitalize"><%=data.author%></td>
+                        <td><%=data.MRP%></td>
+                        <td class="flex justify-center items-center mt-1">
+                            <div <% if(data.status==="No stock") {%> class="bg-[#fbebec] text-[#b16d70] rounded-full text-center w-2/3 px-2 whitespace-nowrap"<% }else{%>class="bg-[#DBFCDF] text-[#189E34] rounded-full text-center w-2/3 px-2 whitespace-nowrap"<%}%>><%=data.status%></div>
+                        </td>
+                        <td>
+                            <div class="flex space-x-4">
+                                <img  onclick="showEditProductPopup()" class="h-4 cursor-pointer" src="/images/edit blue.png" alt="">
+                                <img  onclick=" deletePopup()" class="h-4 cursor-pointer" src="/images/trash red.png" alt="">
+                            </div>
+                        </td>
+                    </tr>
+                <%})%> 
                 
-                <tr class="bg-white  text-sm  ">
-                    <td class="ps-3 py-2">#135343</td>
-                    <td class="max-w-[14rem] truncate pr-6 font-medium">The Princess Bride: S. Morgenstern's Classic Tale of True Love and High Adventure</td>
-                    <td>Novel</td>
-                    <td>Arthur Conan Doyle</td>
-                    <td>₹299</td>
-                    <td class="flex justify-center items-center mt-1">
-                        <div class="bg-[#DBFCDF] text-[#189E34] rounded-full text-center w-2/3 px-2">stock</div>
-                    </td>
-                    <td>
-                        <div class="flex space-x-4">
-                            <img  onclick="showEditProductPopup()" class="h-4 cursor-pointer" src="/images/edit blue.png" alt="">
-                            <img    onclick=" deletePopup()" class="h-4 cursor-pointer" src="/images/trash red.png" alt="">
-                        </div>
-                    </td>
-                </tr>
-                <tr class="bg-white  text-sm  ">
-                    <td class="ps-3 py-2">#135343</td>
-                    <td class="max-w-[14rem] truncate pr-6 font-medium">The Curious Incident of the Dog in the Night-Time</td>
-                    <td>Novel</td>
-                    <td>Arthur Conan Doyle</td>
-                    <td>₹299</td>
-                    <td class="flex justify-center items-center mt-1">
-                        <div class="bg-[#DBFCDF] text-[#189E34] rounded-full text-center w-2/3 px-2">stock</div>
-                    </td>
-                    <td>
-                        <div class="flex space-x-4 cursor-pointer">
-                            <img  onclick="showEditProductPopup()()" class="h-4" src="/images/edit blue.png" alt="">
-                            <img onclick=" deletePopup()" class="h-4 cursor-pointer" src="/images/trash red.png" alt="">
-                        </div>
-                    </td>
-                </tr>
-                <tr class="bg-white  text-sm  ">
-                    <td class="ps-3 py-2">#135343</td>
-                    <td class="max-w-[14rem] truncate pr-6 font-medium">I'd Tell You I Love You, But Then I'd Have to Kill You (Gallagher Girls, #1)</td>
-                    <td>Novel</td>
-                    <td>Arthur Conan Doyle</td>
-                    <td>₹299</td>
-                    <td class="flex justify-center items-center mt-1">
-                        <div class="bg-[#FBEBEC] text-[#B16D70] rounded-full text-center w-2/3 px-2 whitespace-nowrap">no stock</div>
-                    </td>
-                    <td>
-                        <div class="flex space-x-4 cursor-pointer">
-                            <img  onclick="showEditProductPopup()()" class=" cursor-pointer h-4" src="/images/edit blue.png" alt="">
-                            <img onclick=" deletePopup()" class="h-4" src="/images/trash red.png" alt="">
-                        </div>
-                    </td>
-                </tr>
-                <tr class="bg-white  text-sm  ">
-                    <td class="ps-3 py-2">#135343</td>
-                    <td class="max-w-[14rem] truncate pr-6 font-medium">The Hound of baskerville</td>
-                    <td>Novel</td>
-                    <td class="max-w-[10rem] truncate pr-6">Arthur Conan doyale</td>
-                    <td>₹299</td>
-                    <td class="flex justify-center items-center mt-1">
-                        <div class="bg-[#DBFCDF] text-[#189E34] rounded-full text-center w-2/3 px-2">stock</div>
-                    </td>
-                    <td>
-                        <div class="flex space-x-4 cursor-pointer">
-                            <img  onclick="showEditProductPopup()()" class="cursor-pointer h-4" src="/images/edit blue.png" alt="">
-                            <img onclick=" deletePopup()" class="h-4" src="/images/trash red.png" alt="">
-                        </div>
-                    </td>
-                </tr>
+               
             </table>
            
 
