--- a/views/partials/admin/deleteCategory.ejs
+++ b/views/partials/admin/deleteCategory.ejs
@@ -18,7 +18,7 @@
                     <div class="flex flex-col space-y-2">
                         <input type="text" hidden name="deleteId" id="deleteId">
                         <button type="submit" class="w-full bg-red-600 text-white font-medium py-1 rounded-sm">
-                            Delete Product
+                            Delete Category
                         </button>
                         <button onclick="hideDeletePopup()" type="button" class="w-full border  text-black font-medium py-1 rounded-sm ">
                             Cancel
